objects/Security_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Security Reviews</relationshipLabel>
        <relationshipName>Security_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Access_Issues_Pushback__c</fullName>
        <description>Defines if the client had any issues accessing our security documentation or pushed back on our standard access policies</description>
        <inlineHelpText>If the prospect/client has any issues accessing our security documentation or pushes back on our policies/procedures for sharing documentation, list them here.</inlineHelpText>
        <label>Client Access Issues/Pushback</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot access Box</fullName>
                </value>
                <value>
                    <fullName>Cannot view encrypted emails</fullName>
                </value>
                <value>
                    <fullName>Want to download reports</fullName>
                </value>
                <value>
                    <fullName>Want files uploaded to own portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gautam Gulati</fullName>
                </value>
                <value>
                    <fullName>Jason Staub</fullName>
                </value>
                <value>
                    <fullName>Steve Smith</fullName>
                </value>
                <value>
                    <fullName>Jonathan Bissett</fullName>
                </value>
                <value>
                    <fullName>Manik Soi</fullName>
                </value>
                <value>
                    <fullName>Eric Dinh</fullName>
                </value>
                <value>
                    <fullName>Daniel Godin</fullName>
                </value>
                <value>
                    <fullName>Okan Koc</fullName>
                </value>
                <value>
                    <fullName>Hans Kurniadi</fullName>
                </value>
                <value>
                    <fullName>Ankur Kaushal</fullName>
                </value>
                <value>
                    <fullName>Stephanie Wu</fullName>
                </value>
                <value>
                    <fullName>Jason Chen</fullName>
                </value>
                <value>
                    <fullName>Jennifer Kim</fullName>
                </value>
                <value>
                    <fullName>Anwar Dhanani</fullName>
                    <isActive>false</isActive>
                    <label>Anwar Dhanani</label>
                </value>
                <value>
                    <fullName>Colin Morrison</fullName>
                    <isActive>false</isActive>
                    <label>Colin Morrison</label>
                </value>
                <value>
                    <fullName>Garvit Arora</fullName>
                    <isActive>false</isActive>
                    <label>Garvit Arora</label>
                </value>
                <value>
                    <fullName>Lisa Asti</fullName>
                    <isActive>false</isActive>
                    <label>Lisa Asti</label>
                </value>
                <value>
                    <fullName>Peter Watt</fullName>
                    <isActive>false</isActive>
                    <label>Peter Watt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_URL__c</fullName>
        <label>Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_for_Requester__c</fullName>
        <label>Notes for Requester</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <description>Used to input the value of an opportunity if not stored in Salesforce already.</description>
        <inlineHelpText>If the security review is for a newly-acquired product whose Opportunities are not in Salesforce, please manually specify the Opportunity value.</inlineHelpText>
        <label>Opportunity Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Security Reviews</relationshipLabel>
        <relationshipName>Security_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <label>Started On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <formula>First_Name__c &amp; " " &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Size__c</fullName>
        <label>T-Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Review</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Security Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Completed_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Security Reviews</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Generic_Security_Review</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Started_On__c</columns>
        <columns>Status__c</columns>
        <columns>Completed_By__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Donaldson</value>
        </filters>
        <label>Generic Security Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Security_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Completed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Date_Received__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Open Security Reviews</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Security_Views_Expanded_View1</fullName>
        <columns>NAME</columns>
        <columns>Started_On__c</columns>
        <columns>Submitter_Name__c</columns>
        <columns>Completed_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Started_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Submitter_Name__c</field>
            <operation>contains</operation>
            <value>afeef</value>
        </filters>
        <label>Security Views Expanded View</label>
        <language>en_US</language>
        <sharedTo>
            <role>AMEnt</role>
            <role>AM_Manager_Ent</role>
            <role>DirectSalesEnt</role>
            <role>PMO</role>
            <role>PreSalesEnt</role>
            <role>SalesOperations_T2</role>
            <role>Sales_Management</role>
            <role>Sales_Manager_Ent</role>
            <role>Sales_Operations_T1</role>
            <role>Sales_Operations_T2</role>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Check_Notes_for_Requestor</fullName>
        <active>true</active>
        <description>Ensures the Security Review cannot be submitted unless the Notes for Requestor is filled out.</description>
        <errorConditionFormula>AND( ISPICKVAL( Status__c ,"Completed") ,ISBLANK(Notes_for_Requester__c))</errorConditionFormula>
        <errorMessage>Please fill out Notes for Requestor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provide_Opp_Value</fullName>
        <active>true</active>
        <description>Requires an Opportunity Value when a Security Review is created without an associated Opportunity.</description>
        <errorConditionFormula>OR(AND(ISBLANK(Opportunity__c), ISBLANK(Opportunity_Value__c)), AND(NOT(ISBLANK(Opportunity__c)), NOT(ISBLANK(Opportunity_Value__c))))</errorConditionFormula>
        <errorDisplayField>Opportunity_Value__c</errorDisplayField>
        <errorMessage>Please provide an opportunity value if you do not have an Opportunity record. If you do have an Opportunity record, please leave this field blank.</errorMessage>
    </validationRules>
</CustomObject>